--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <body style="padding:100px;">
         <div style="max-width:1000px;margin:0 auto;display:flex;flex-direction:column;align-items:center;">
             <img src="kle/alix40.svg"/>
+<img src="kle/bear65.svg"/>
 <img src="kle/candybar.svg"/>
 <img src="kle/corne.svg"/>
 <img src="kle/discipline65.svg"/>
